--- a/backend/package.json
+++ b/backend/package.json
@@ -21,5 +21,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0"
+  },
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=16.20.1 <20.0.0"
   }
 }
